--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/pagination-next-previous-links.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/pagination-next-previous-links.css
@@ -73,13 +73,31 @@
     margin: 0 20%;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1200px) {
+    .pagination-link-container {
+        margin: 0 15%;
+    }
+}
+
+@media (max-width: 992px) {
+    .pagination-link-container {
+        margin: 0 12%;
+    }
+}
+
+@media (max-width: 768px) {
     .pagination-link-container {
         margin: 0 10%;
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+    .pagination-link-container {
+        margin: 0 7%;
+    }
+}
+
+@media (max-width: 520px) {
     .pagination-link-container {
         margin: 0 5%;
     }
