--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForAllTime.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForAllTime.cshtml
@@ -2,15 +2,15 @@
     ViewData["Title"] = "Лучшие обсуждения";
 }
 @model GetDiscussionsViewModel
-<link rel="stylesheet" href="~/css/forumNavbar.css" />
+<link rel="stylesheet" href="~/css/discussion/DiscussionsNavbar.css" />
 <link rel="stylesheet" href="~/css/pagination-next-previous-links.css"/>
 <link rel="stylesheet" href="~/css/discussion/discussionsList.css"/>
 
-<div class="forum-navbar">
+<div class="discussions-navbar">
     <a asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForToday" asp-route-pageNumber="1" asp-route-pageSize="20">За сегодня</a>
     <a asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForWeek" asp-route-pageNumber="1" asp-route-pageSize="20">За неделю</a>
     <a asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForMonth" asp-route-pageNumber="1" asp-route-pageSize="20">За месяц</a>
-    <a class="active-forum-navbar" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForAllTime" asp-route-pageNumber="1" asp-route-pageSize="20">За все время</a>
+    <a class="active-discussions-navbar" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForAllTime" asp-route-pageNumber="1" asp-route-pageSize="20">За все время</a>
 </div>
 
 @foreach (var discussion in Model.Discussions)
