--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/forumNavbar.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/forumNavbar.css
@@ -1,14 +1,51 @@
-﻿.forum-navbar a{
+﻿.forum-navbar {
+    margin: 0 25%;
+    margin-bottom: 10px;
+}
+
+.forum-navbar a{
     text-decoration: none;
     background-color: white;
     color: black;
     padding: 10px 15px;
 }
+
 .forum-navbar a:hover {
     color: orange;
 }
+
 .forum-navbar a.active-forum-navbar {
     background-color: white;
     color: orange;
     font-weight: bolder;
+}
+
+@media (max-width: 1200px) {
+    .forum-navbar {
+        margin: 10px 20%;
+    }
+}
+
+@media (max-width: 992px) {
+    .forum-navbar {
+        margin: 10px 15%;
+    }
+}
+
+@media (max-width: 768px) {
+    .forum-navbar {
+        margin: 10px 12%;
+    }
+}
+
+@media (max-width: 600px) {
+    .forum-navbar {
+        margin: 10px 9%;
+    }
+}
+
+@media (max-width: 520px) {
+    .forum-navbar {
+        margin: 10px 7%;
+    }
 }
