--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/topic/TopicPreview.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/topic/TopicPreview.css
@@ -17,80 +17,11 @@
     font-weight: 600;
 }
 
-.pagination-link-next {
-    text-decoration: none;
-    border: 1px solid #333;
-    color: black;
-    background-color: white;
-    text-align: center;
-    padding: 6px 20px;
-    border-radius: 7px;
-    display: block;
-    width: 120px;
-    margin: 0 6px;
-}
-
-.pagination-link-next-doesnt-exist {
-    text-decoration: none;
-    color: white;
-    background-color: #ccc;
-    text-align: center;
-    opacity: 0.6;
-    padding: 6px 20px;
-    border-radius: 7px;
-    display: block;
-    width: 120px;
-    margin: 0 6px;
-}
-
-.pagination-link-next-doesnt-exist:hover {
-    cursor: not-allowed;
-    color: white;
-}
-
-.pagination-link-previous-doesnt-exist {
-    text-decoration: none;
-    color: white;
-    background-color: #ccc;
-    text-align: center;
-    opacity: 0.6;
-    padding: 6px 20px;
-    border-radius: 7px;
-    display: block;
-    width: 120px;
-}
-
-.pagination-link-previous-doesnt-exist:hover {
-    cursor: not-allowed;
-    color: white;
-}
-
-.pagination-link-next:hover {
-    background-color: #f1f1f1;
-    border: 1px solid #d2691e;
-    color: black;
-}
-
-.pagination-link-previous {
-    text-decoration: none;
-    border: 1px solid #333;
-    color: black;
-    background-color: white;
-    text-align: center;
-    padding: 6px 20px;
-    border-radius: 7px;
-    display: block;
-    width: 120px;
-}
-
-.pagination-link-previous:hover {
-    background-color: #f1f1f1;
-    border: 1px solid #d2691e;
-    color: black;
-}
-
 .pagination-link-container {
-    display: flex;
+    margin: 0 25%;
+}
+
+.search-form {
     margin: 0 25%;
 }
 
@@ -120,6 +51,40 @@
 
 @media (max-width: 520px) {
     .pagination-link-container {
+        margin: 0 7%;
+    }
+}
+
+
+
+
+
+@media (max-width: 1200px) {
+    .search-form {
+        margin: 0 20%;
+    }
+}
+
+@media (max-width: 992px) {
+    .search-form {
+        margin: 0 15%;
+    }
+}
+
+@media (max-width: 768px) {
+    .search-form {
+        margin: 0 12%;
+    }
+}
+
+@media (max-width: 600px) {
+    .search-form {
+        margin: 0 9%;
+    }
+}
+
+@media (max-width: 520px) {
+    .search-form {
         margin: 0 7%;
     }
 }
