--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Topic.cshtml
@@ -2,59 +2,79 @@
     ViewData["Title"] = $"{Model.TopicName}";
 }
 @model DiscussionViewModel
+<link rel="stylesheet" href="~/css/SearchForm.css"/>
+<link rel="stylesheet" href="~/css/NextPreviousPaginationBtns.css" />
+<link rel="stylesheet" href="~/css/discussion/discussionsList.css" />
+<link rel="stylesheet" href="~/css/topic/TopicsDiscussionsList.css"/>
+<link rel="stylesheet" href="~/css/discussion/DiscussionsPreview.css"/>
 
-<h3>Обсуждения</h3>
-<a asp-controller="Discussion" asp-action="SuggestDiscussion" asp-route-topicName="@Model.TopicName">создать обсуждение</a>
-<form method="get">
-    <input name="searchingQuery" placeholder="Поиск" />
-    <input type="hidden" name="pageSize" value="@ViewBag.PageSize" />
-    <input type="hidden" name="pageNumber" value="1" />
-    <input type="hidden" name="topicName" value="@Model.TopicName" />
-    <input type="submit" value="найти"/>
-</form>
-<div>
-    @foreach (var discussion in Model.Discussions)
-    {
-        <a asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@discussion.Id" asp-route-pageNumber="1" asp-route-pageSize="20">
-            @discussion.Title
-        </a>
-        <h6>Создано: @discussion.CreatedBy</h6>
-        <h6>Рейтинг: @discussion.Rating</h6>
-        <h6>Дата создания: @discussion.CreatedAt</h6>
-    }
+<div class="search-create">
+    <form method="get" class="search-form">
+        <input class="search-input" name="searchingQuery" placeholder="Поиск..." />
+        <input type="hidden" name="pageSize" value="@ViewBag.PageSize" />
+        <input type="hidden" name="pageNumber" value="1" />
+        <input type="hidden" name="topicName" value="@Model.TopicName" />
+        <input class="search-submit" type="submit" value="Найти"/>
+    </form>
+    <a class="create-discussion-link" asp-controller="Discussion" asp-action="SuggestDiscussion" asp-route-topicName="@Model.TopicName">
+        + Создать обсуждение
+    </a>
 </div>
 
-@if (ViewBag.PreviousPageNumber != 0 && Model.Discussions.Count != 0)
+@foreach (var discussion in Model.Discussions)
 {
-    @if (ViewBag.SearchingQuery is null)
-    {
-         <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize"
-           asp-route-topicName="@Model.TopicName">
-            Назад
+    <div class="border-div">
+        <a class="discussion-title" asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@discussion.Id" asp-route-pageNumber="1"
+           asp-route-pageSize="20">@discussion.Title
         </a>
+        <p class="rating-value" data-value="@discussion.Rating">Рейтинг: @discussion.Rating</p>
+        <p>Создано: @discussion.CreatedBy</p>
+        <p>Дата создания: @discussion.CreatedAt</p>
+    </div>
+}
+
+<div class="pagination-link-container">
+    @if (ViewBag.PreviousPageNumber != 0 && Model.Discussions.Count != 0)
+    {
+        @if (ViewBag.SearchingQuery is null)
+        {
+            <a class="pagination-link-previous" asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.PreviousPageNumber"
+               asp-route-pageSize="@ViewBag.PageSize"asp-route-topicName="@Model.TopicName">
+                Назад
+            </a>
+        }
+        else
+        {
+            <a class="pagination-link-previous" asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.PreviousPageNumber"
+               asp-route-pageSize="@ViewBag.PageSize" asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-topicName="@Model.TopicName">
+                Назад
+            </a>
+        }
     }
     else
     {
-        <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.PageSize"
-           asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-topicName="@Model.TopicName">
-            Назад
-        </a>
+        <a class="pagination-link-previous-doesnt-exist">Назад</a>
     }
-}
-@if (ViewBag.DoesNextPageExist && Model.Discussions.Count != 0)
-{
-    @if (ViewBag.SearchingQuery is null)
+    @if (ViewBag.DoesNextPageExist && Model.Discussions.Count != 0)
     {
-        <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize"
-           asp-route-topicName="@Model.TopicName">
-            Вперед
-        </a>
+        @if (ViewBag.SearchingQuery is null)
+        {
+            <a class="pagination-link-next" asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.NextPageNumber"
+               asp-route-pageSize="@ViewBag.PageSize"asp-route-topicName="@Model.TopicName">
+                Вперед
+            </a>
+        }
+        else
+        {
+            <a class="pagination-link-next" asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.NextPageNumber"
+               asp-route-pageSize="@ViewBag.PageSize" asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-topicName="@Model.TopicName">
+                Вперед
+            </a>
+        }
     }
     else
     {
-        <a asp-controller="Topic" asp-action="Topic" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.PageSize"
-           asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-topicName="@Model.TopicName">
-            Вперед
-        </a>
+        <a class="pagination-link-next-doesnt-exist">Вперед</a>
     }
-}
+</div>
+<script src="~/js/discussion/RatingColorChanging.js"></script>
