--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -56,7 +56,7 @@
     </div>
 
     <p>@Model.UserName</p>
-    <p>@ViewBag.UserRole</p>
+    <p>Роль: @ViewBag.UserRole</p>
     <p>Зарегистрирован: @Model.RegisteredAt</p>
     <p>Создано обсуждений: @Model.Posts</p>
     <p>Ответов: @Model.Answers</p>
