--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
@@ -1,55 +1,69 @@
 ﻿@{
     ViewData["Title"] = @ViewBag.Title;
 }
-<link rel="stylesheet" href="~/css/BreakLargeLines.css"/>
+<link rel="stylesheet" href="~/css/discussion/Discussion.css"/>
 @model Web.MVC.DTOs.Comment.SuggestCommentDto
 
-<div>
-    <h4>@ViewBag.Title</h4>
-    <p>Создано by: @ViewBag.CreatedBy</p>
-    <p>Дата создания: @ViewBag.CreatedAt</p>
-    <p>Рейтинг: @ViewBag.Rating</p>
-    @if (User.Identity.Name != @ViewBag.CreatedBy)
-    {
-        string returnUrl;
-        if (Context.Request.QueryString.HasValue)
+<h4 class="title">@ViewBag.Title</h4>
+<p>@ViewBag.Content</p>
+
+<p>Создано: <a class="discussion-created-by" asp-controller="User" asp-action="GetUser" asp-route-userName="@ViewBag.CreatedBy">@ViewBag.CreatedBy</a></p>
+<p>Дата создания: @ViewBag.CreatedAt</p>
+
+<div class="discussion-additional-content">
+    <div class="rating">
+        @if (User.Identity.Name != ViewBag.CreatedBy)
         {
-            returnUrl = Context.Request.Path + Context.Request.QueryString;
+            string returnUrl;
+            if (Context.Request.QueryString.HasValue)
+            {
+                returnUrl = Context.Request.Path + Context.Request.QueryString;
+            }
+            else
+            {
+                returnUrl = Context.Request.Path;
+            }
+
+            <p>Рейтинг:
+                <form class="increase-rating-form" method="post" asp-action="IncreaseDiscussionRatingByOne" asp-controller="Discussion"
+                      asp-route-returnUrl="@returnUrl"asp-route-discussionId="@ViewBag.DiscussionId">
+                    <input class="increase-rating-input" type="submit" value="↑" />
+                </form>
+                <p class="discussion-rating">@ViewBag.Rating</p>
+                <form method="post" asp-action="DecreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@returnUrl"
+                      asp-route-discussionId="@ViewBag.DiscussionId">
+                <input class="decrease-rating-input" type="submit" value="↓" />
+                </form>
+            </p>
         }
         else
         {
-            returnUrl = Context.Request.Path;
+            <p>Рейтинг: @ViewBag.Rating</p>
         }
-        <form method="post" asp-action="IncreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@returnUrl"
-            asp-route-discussionId="@ViewBag.DiscussionId">
-            <input type="submit" value="+"/>
-        </form>
-        <form method="post" asp-action="DecreaseDiscussionRatingByOne" asp-controller="Discussion" asp-route-returnUrl="@returnUrl"
-            asp-route-discussionId="@ViewBag.DiscussionId">
-            <input type="submit" value="-" />
-        </form>
-    }
-    
-    <p class="break-line">@ViewBag.Content</p>
-    @if (User.Identity.Name != ViewBag.CreatedBy)
-    {
-        string returnUrl;
-        if (Context.Request.QueryString.HasValue)
+    </div>
+    <div class="other-additional">
+        @if (User.Identity.Name != ViewBag.CreatedBy)
         {
-            returnUrl = Context.Request.Path + Context.Request.QueryString;
+            string returnUrl;
+            if (Context.Request.QueryString.HasValue)
+            {
+                returnUrl = Context.Request.Path + Context.Request.QueryString;
+            }
+            else
+            {
+                returnUrl = Context.Request.Path;
+            }
+
+            <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@ViewBag.CreatedBy" asp-route-reportedDiscussionTitle="@ViewBag.Title"
+               asp-route-reportedDiscussionContent="@ViewBag.Content" asp-route-reportedDiscussionId="@ViewBag.DiscussionId">Пожаловаться</a>
+            <form method="post" asp-controller="Bookmark" asp-action="AddBookmark" asp-route-returnUrl="@returnUrl" asp-route-discussionId="@ViewBag.DiscussionId"
+                  asp-route-discussionTitle="@ViewBag.Title">
+                <input class="add-bookmark" type="submit" value="Добавить в закладки" />
+            </form>
         }
-        else
-        {
-            returnUrl = Context.Request.Path;
-        }
-        <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@ViewBag.CreatedBy" asp-route-reportedDiscussionTitle="@ViewBag.Title"
-           asp-route-reportedDiscussionContent="@ViewBag.Content" asp-route-reportedDiscussionId="@ViewBag.DiscussionId">пожаловаться</a>
-        <form method="post" asp-controller="Bookmark" asp-action="AddBookmark" asp-route-returnUrl="@returnUrl" asp-route-discussionId="@ViewBag.DiscussionId"
-              asp-route-discussionTitle="@ViewBag.Title">
-            <input type="submit" value="добавить в закладки"/>
-        </form>
-    }
+    </div>
 </div>
+
 <div>
     <form method="post" asp-controller="Discussion" asp-action="SuggestComment" asp-route-id="@ViewBag.DiscussionId">
         <div asp-validation-summary="ModelOnly"></div>
