--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/Discussion.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/Discussion.css
@@ -2,8 +2,44 @@
     margin-bottom: 20px;
 }
 
-.search-div {
+.comment-div {
     margin-top: 3%;
+}
+
+.leave-a-comment-textarea {
+    width: 30%;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 15px;
+    resize: none;
+    overflow: hidden;
+    transition: border-color 0.3s;
+}
+
+.leave-a-comment-textarea:focus {
+    border-color: orange;
+    outline: none;
+}
+
+.leave-a-comment-textarea:hover {
+    cursor: text;
+}
+
+.send-a-comment {
+    border: none;
+    border-radius: 4px;
+    background-color: orange;
+    color: white;
+    padding: 8px 12px;
+    font-size: 15px;
+    margin-top: 5px;
+}
+
+.send-a-comment:hover {
+    background-color: darkorange;
+    color: white;
+    cursor: pointer;
 }
 
 .discussion-additional-content {
@@ -113,31 +149,46 @@
 
 
 @media (max-width: 1200px) {
-    .search-div {
+    .comment-div {
         margin-top: 4%;
+    }
+    .leave-a-comment-textarea {
+        width: 40%;
     }
 }
 
 @media (max-width: 992px) {
-    .search-div {
+    .comment-div {
         margin-top: 5%;
+    }
+    .leave-a-comment-textarea {
+        width: 45%;
     }
 }
 
 @media (max-width: 768px) {
-    .search-div {
+    .comment-div {
         margin-top: 6%;
+    }
+    .leave-a-comment-textarea {
+        width: 50%;
     }
 }
 
 @media (max-width: 600px) {
-    .search-div {
+    .comment-div {
         margin-top: 7%;
+    }
+    .leave-a-comment-textarea {
+        width: 55%;
     }
 }
 
 @media (max-width: 520px) {
-    .search-div {
+    .comment-div {
         margin-top: 7%;
+    }
+    .leave-a-comment-textarea {
+        width: 60%;
     }
 }
