Customize discussion page

--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
@@ -74,7 +74,8 @@
         <input class="send-a-comment" type="submit" value="Отправить"/>
     </form>
 </div>
-<div>
+
+<div class="comments-list-main-div">
     @if (ViewBag.Comments is null || ViewBag.Comments.Count == 0)
     {
         <p>Ещё никто не оставил комментарий под этим обсуждением :(</p>
@@ -92,40 +93,45 @@
             {
                 returnUrl = Context.Request.Path;
             }
-            <p>@comment.CreatedBy в @comment.CreatedDate</p>
-            if (comment.RepliedOnCommentId is not null)
-            {
-                <p>@comment.RepliedOnCommentCreatedBy:</p>
-                <p>"@comment.RepliedOnCommentContent"</p>
-            }
-
-            if (comment.RepliedOnCommentId is null && comment.RepliedOnCommentCreatedBy is not null)
-            {
-                <p>@comment.RepliedOnCommentCreatedBy:</p>
-                <p>Комменарий был удален</p>
-            }
-            <p>@comment.Content</p>
-            if (User.Identity.Name == comment.CreatedBy)
-            {
-                <form method="post" asp-controller="Comment" asp-action="DeleteComment" asp-route-returnUrl="@returnUrl" asp-route-id="@comment.Id">
-                    <input type="submit" value="удалить"/>
-                </form>
-            }
-            else
-            {
-                <form method="post" asp-controller="Discussion" asp-action="SuggestComment" asp-route-id="@ViewBag.DiscussionId"
+            <div class="comment">
+                <p>@comment.CreatedBy в @comment.CreatedDate</p>
+                @if (comment.RepliedOnCommentId is not null)
+                {
+                    <div class="comment-replying-content">
+                        <p class="mb-2"><strong>@comment.RepliedOnCommentCreatedBy:</strong></p>
+                        <p class="mb-2">"@comment.RepliedOnCommentContent"</p>
+                    </div>
+                }
+                @if (comment.RepliedOnCommentId is null && comment.RepliedOnCommentCreatedBy is not null)
+                {
+                    <div class="comment-replying-content">
+                        <p class="mb-2"><strong>@comment.RepliedOnCommentCreatedBy:</strong></p>
+                        <p class="mb-2">Комменарий был удален</p>
+                    </div>
+                }
+                <p class="m-0">@comment.Content</p>
+                @if (User.Identity.Name == comment.CreatedBy)
+                {
+                    <form method="post" asp-controller="Comment" asp-action="DeleteComment" asp-route-returnUrl="@returnUrl" asp-route-id="@comment.Id">
+                        <input type="submit" value="удалить" />
+                    </form>
+                }
+                else
+                {
+                    <form method="post" asp-controller="Discussion" asp-action="SuggestComment" asp-route-id="@ViewBag.DiscussionId"
                       asp-route-repliedOnCommentContent="@comment.Content" asp-route-repliedOnCommentId="@comment.Id"
                       asp-route-repliedOnCommentCreatedBy="@comment.CreatedBy">
-                    <div asp-validation-summary="ModelOnly"></div>
-                    <div>
-                        <input asp-for="Content" placeholder="Ответить">
-                        <span asp-validation-for="Content"></span>
-                    </div>
-                    <input type="submit" value="отправить"/>
-                </form>
-                <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@comment.CreatedBy"
-                   asp-route-reportedCommentContent="@comment.Content" asp-route-reportedCommentId="@comment.Id">пожаловаться</a>
-            }
+                        <div asp-validation-summary="ModelOnly"></div>
+                        <div>
+                            <input asp-for="Content" placeholder="Ответить">
+                            <span asp-validation-for="Content"></span>
+                        </div>
+                        <input type="submit" value="отправить" />
+                    </form>
+                    <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@comment.CreatedBy"
+                       asp-route-reportedCommentContent="@comment.Content" asp-route-reportedCommentId="@comment.Id">пожаловаться</a>
+                }
+            </div>
         }
     }
 </div>
