--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/Discussion.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/Discussion.css
@@ -147,6 +147,24 @@
     transform: scale(0.95);
 }
 
+.comments-list-main-div {
+    margin-top: 20px;
+}
+
+.comment {
+    border: 1px solid black;
+    border-radius: 7px;
+    padding: 15px;
+    margin-bottom: 8px;
+}
+
+.comment-replying-content {
+    border: 1px dashed black;
+    padding: 15px;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 10px;
+}
 
 @media (max-width: 1200px) {
     .comment-div {
