--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/Discussion.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/Discussion.css
@@ -166,6 +166,53 @@
     margin-bottom: 10px;
 }
 
+.comment-delete {
+    margin-top: 5px;
+    border: none;
+    color: white;
+    background-color: orange;
+    border-radius: 4px;
+    padding: 7px 10px;
+}
+
+.comment-delete:hover {
+    background-color: darkorange;
+    color: white;
+}
+
+.comment-additional-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.reply-to-comment-form {
+    display: none;
+}
+
+.open-reply-to-comment {
+    margin-top: 5px;
+    background-color: orange;
+    border: none;
+    font-size: 15px;
+    color: white;
+    border-radius: 4px;
+    padding: 8px 12px;
+}
+
+.open-reply-to-comment:hover {
+    cursor: pointer;
+    background-color: darkorange;
+}
+
+.report-link {
+    text-decoration: none;
+    color: black;
+}
+
+.report-link:hover {
+    color: black;
+}
+
 @media (max-width: 1200px) {
     .comment-div {
         margin-top: 4%;
